# VoxelRendererSchoolProject

./: Cargo.toml  Oriëntatieverslag.docx  README.md  Uitwerking.docx  ~$iëntatieverslag.docx  ~$twerking.docx
shaders/: voxel.wgsl
src/: app.rs  lib.rs  main.rs  render.rs  tracer.rs  window.rs
